--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,19 +39,17 @@
                 <!--android:value="com.jennifer.controller.MainActivity" />-->
         </activity>
         <activity
-<<<<<<< HEAD
             android:name=".controller.CrearPrivadas"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <!--<meta-data-->
             <!--android:name="android.support.PARENT_ACTIVITY"-->
             <!--android:value="com.jennifer.controller.MainActivity" />-->
-=======
+        </activity>
+        <activity
             android:name=".controller.ApPublicasController"
             android:label="@string/title_activity_apuestas_publicas"
-            android:theme="@style/AppTheme.NoActionBar">
->>>>>>> 9fcb2fbf93fc4a3836d3f92d7bb96591aedad764
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
 </manifest>
