--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,12 +27,12 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".controller.MainActivity"
+            android:name=".controller.MainActivityController"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar"/>
 
         <activity
-            android:name=".controller.SecondActivity"
+            android:name=".controller.SecondActivityController"
             android:label="@string/title_activity_second"
             android:theme="@style/AppTheme.NoActionBar">
             <!--<meta-data-->
@@ -40,7 +40,7 @@
                 <!--android:value="com.jennifer.controller.MainActivity" />-->
         </activity>
         <activity
-            android:name=".controller.CrearPrivadas"
+            android:name=".controller.CrearPrivadasController"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <!--<meta-data-->
